# WikibaseIntegrator

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md  dependabot.yaml  dependabot.yml
.github/wikibase-ci/: README.md  docker-compose.yml  seed_local_wikibase.py  wait_for_api.py
.github/workflows/: auto-assign-issue.yaml  codeql-analysis.yaml  codeql-analysis.yml  codeql.yml  publish-to-pypi.yaml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-lint.yaml  python-lint.yml  python-package.yml  python-pytest.yaml  python-pytest.yml  quick-pep517-test.yml  recurrent-trivy.yaml  test-use-pypa-build.yml  trivy-scan.yaml  update-test-fixtures.yaml
.github_disabled/workflows/: publish-to-pypi.yml
docs/: README.md  conf.py  index.rst  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  index.rst  modules.rst  readme.rst  wikibaseintegrator.datatypes.basedatatype.rst  wikibaseintegrator.datatypes.commonsmedia.rst  wikibaseintegrator.datatypes.entityschema.rst  wikibaseintegrator.datatypes.externalid.rst  wikibaseintegrator.datatypes.extra.edtf.rst  wikibaseintegrator.datatypes.extra.localmedia.rst  wikibaseintegrator.datatypes.extra.rst  wikibaseintegrator.datatypes.form.rst  wikibaseintegrator.datatypes.geoshape.rst  wikibaseintegrator.datatypes.globecoordinate.rst  wikibaseintegrator.datatypes.item.rst  wikibaseintegrator.datatypes.lexeme.rst  wikibaseintegrator.datatypes.math.rst  wikibaseintegrator.datatypes.monolingualtext.rst  wikibaseintegrator.datatypes.musicalnotation.rst  wikibaseintegrator.datatypes.property.rst  wikibaseintegrator.datatypes.quantity.rst  wikibaseintegrator.datatypes.rst  wikibaseintegrator.datatypes.sense.rst  wikibaseintegrator.datatypes.string.rst  wikibaseintegrator.datatypes.tabulardata.rst  wikibaseintegrator.datatypes.time.rst  wikibaseintegrator.datatypes.url.rst  wikibaseintegrator.entities.baseentity.rst  wikibaseintegrator.entities.item.rst  wikibaseintegrator.entities.lexeme.rst  wikibaseintegrator.entities.mediainfo.rst  wikibaseintegrator.entities.property.rst  wikibaseintegrator.entities.rst  wikibaseintegrator.models.aliases.rst  wikibaseintegrator.models.basemodel.rst  wikibaseintegrator.models.claims.rst  wikibaseintegrator.models.descriptions.rst  wikibaseintegrator.models.forms.rst  (+19 more)
docs/source/_templates/: module.rst_t  package.rst_t  toc.rst_t
notebooks/: import_entity.ipynb  item_create_new.ipynb  item_get.ipynb  lexeme_update.ipynb  lexeme_write.ipynb  wbi_helpers.ipynb
scripts/: update_test_fixtures.py
test/: conftest.py  test_all.py  test_backoff.py  test_claims_add_bug.py  test_core.py  test_datatype_time.py  test_datatypes.py  test_entity_item.py  test_entity_lexeme.py  test_entity_mediainfo.py  test_entity_property.py  test_entityshape.py  test_fastrun.py  test_item_creation.py  test_item_generator.py  test_models.py  test_references.py  test_wbi_backoff.py  test_wbi_core.py  test_wbi_core.py.old  test_wbi_datatype.py  test_wbi_exceptions.py  test_wbi_fastrun.py  test_wbi_fastrun.py.old  test_wbi_helpers.py  test_wbi_login.py  test_wdi_login.py  wikibase_test_config.py
test/docker-compose/: .env  README.md  docker-compose.extra.yml  docker-compose.yml  jobrunner-entrypoint.sh
test/fixtures/: item_Q582.json  lexeme_L5.json  mediainfo_M75908279.json  property_P50.json
test/integration/: README.md  conftest.py  docker-compose.yml  test_wikibase_roundtrip.py
wikibaseintegrator/: __init__.py  __version__.py  wbi_api.py  wbi_backoff.py  wbi_config.py  wbi_core.py  wbi_datatype.py  wbi_enums.py  wbi_exceptions.py  wbi_fastrun.py  wbi_functions.py  wbi_helpers.py  wbi_item.py  wbi_jsonparser.py  wbi_lexeme.py  wbi_login.py  wbi_property.py  wdi_backoff.py  wdi_core.py  wdi_fastrun.py  wdi_login.py  wikibaseintegrator.py
wikibaseintegrator/datatypes/: __init__.py  basedatatype.py  commonsmedia.py  entityschema.py  externalid.py  form.py  geoshape.py  globecoordinate.py  item.py  lexeme.py  math.py  monolingualtext.py  musicalnotation.py  property.py  quantity.py  sense.py  string.py  tabulardata.py  time.py  url.py
wikibaseintegrator/datatypes/extra/: __init__.py  edtf.py  localmedia.py
wikibaseintegrator/entities/: __init__.py  baseentity.py  item.py  lexeme.py  mediainfo.py  property.py
wikibaseintegrator/models/: __init__.py  alias.py  aliases.py  basemodel.py  claim.py  claims.py  descriptions.py  form.py  forms.py  glosses.py  labels.py  language_value.py  language_values.py  lemmas.py  qualifiers.py  qualifiers.py.old  reference.py  references.py  representations.py  sense.py  senses.py  sitelink.py  sitelinks.py  snak.py  snaks.py
wikibaseintegrator/ref_handlers/: test_update_retrieved_if_new.py  update_release.py
wikibaseintegrator/tests/: test_all.py  test_backoff.py  test_fastrun.py  test_handle_refs.py  test_item_creation.py  test_item_generator.py  test_wd_search.py  test_wdi_helpers.py  test_wdi_login.py  tests.py
wikibaseintegrator/wdi_helpers/: mapping_relation_helper.py  publication.py  release.py  wikibase_helper.py
wikidataintegrator/: wdi_core.py
