[tool.poetry]
name = "WikibaseIntegrator"
version = "0.12.14"
description = "Python package for reading from and writing to a Wikibase instance"
authors = [
    "Myst",
    "Wikibase Integrator authors",
    "Wikidata Integrator authors"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "wikibaseintegrator" }]
include = [{ path = "tests", format = "sdist" }]
homepage = "https://github.com/LeMyst/WikibaseIntegrator"
repository = "https://github.com/LeMyst/WikibaseIntegrator"
documentation = "https://wikibaseintegrator.readthedocs.io"
keywords = ["wikibase", "wikidata", "mediawiki", "sparql"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LeMyst/WikibaseIntegrator/issues"
Changelog = "https://github.com/LeMyst/WikibaseIntegrator/releases"

[tool.poetry.dependencies]
python = "^3.9"
backoff = "^2.2.1"
mwoauth = "^0.4.0"
oauthlib = "^3.2.2"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
ujson = "^5.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
pylint-exit = "*"
mypy = "*"
codespell = "*"
flynt = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
readthedocs-sphinx-ext = "*"
sphinx-rtd-theme = "*"
sphinx-github-changelog = "*"
sphinx-autodoc-typehints = "*"
toml = "*"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
jupyter = "*"
# Force jupyterlab 4.2.5 to have the latest version of notebook
jupyterlab = "^4.2.5"

[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies]
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 179

[tool.mypy]
ignore_missing_imports = true
files = "wikibaseintegrator/**/*.py,test/*.py"

[tool.pylint.MASTER]
extension-pkg-allow-list = [
    "ujson"
]

[tool.pylint.messages_control]
max-line-length = 180
disable = [
    "fixme",
    "redefined-builtin",
    "invalid-name", # To remove later
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-statements",
    "too-many-locals",
    "too-many-branches",
    "too-many-instance-attributes",
    "import-outside-toplevel"  # To remove later
]

[tool.pytest.ini_options]
log_cli = true
