[metadata]
name = wikibaseintegrator
version = 0.12.0.dev6
author = Myst, Wikibase Integrator authors and Wikidata Integrator authors
license = MIT
license_files = LICENSE
description = Python package for reading from and writing to a Wikibase instance
keywords = wikibase, wikidata, mediawiki, sparql
home_page = https://github.com/LeMyst/WikibaseIntegrator
project_urls =
    Bug Tracker = https://github.com/LeMyst/WikibaseIntegrator/issues
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    backoff~=1.11.1
    frozendict~=2.0.6
    mwoauth~=0.3.7
    oauthlib~=3.1.1
    requests~=2.26.0
    simplejson~=3.17.5
python_requires = >=3.7, <=3.11

[options.extras_require]
dev =
    pytest
    pylint
    pylint-exit
    mypy
docs =
    Sphinx~=4.2.0
    readthedocs-sphinx-ext~=2.1.4
    sphinx-rtd-theme~=1.0.0
    sphinx_github_changelog @ git+https://github.com/LeMyst/sphinx-github-changelog.git@1.0.8-Sphinx-4.2.0#egg=sphinx_github_changelog
    m2r2~=0.3.1
    sphinx-autodoc-typehints~=1.12.0
coverage =
    pytest-cov
