[metadata]
name = wikibaseintegrator
version = 0.12.0.dev7
author = Myst, Wikibase Integrator authors and Wikidata Integrator authors
license = MIT
license_files = LICENSE
description = Python package for reading from and writing to a Wikibase instance
keywords = wikibase, wikidata, mediawiki, sparql
home_page = https://github.com/LeMyst/WikibaseIntegrator
project_urls =
    Bug Tracker = https://github.com/LeMyst/WikibaseIntegrator/issues
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    backoff~=1.11.1
    mwoauth~=0.3.7
    oauthlib~=3.1.1
    requests~=2.27.1
    ujson~=5.1.0
python_requires = >=3.7, <=3.11

[options.extras_require]
dev =
    pytest
    pylint
    pylint-exit
    mypy
coverage =
    pytest-cov
